--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Sistema de registro de juegos</title>
 </head>
 <body>
-    
+    <h1>Correo: newprovidentia@gmail.com </h1>
+    <p>Manin</p>
 </body>
 </html>
